assignment 06 adding validation and error handling
